<resources>
    <string name="app_name">PVWatts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title">PVWatt</string>
    <string name="content_description_more">In this section there is the possibility to find out more about the developer and send an email.</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dc_system_size_kw">DC System Size (kW)</string>
    <string name="required">*Required</string>
    <string name="tilt_deg">Tilt (deg)</string>
    <string name="azimuth_deg">Azimuth (deg)</string>
    <string name="advanced_parameters">Advanced Parameters</string>
    <string name="inverter_efficiency_with_symbol">Inverter Efficiency (%)</string>
    <string name="ground_coverage_ratio">Ground coverage ratio</string>
    <string name="rate_type">Rate Type</string>
    <string name="calculate">Calculate</string>
    <string name="month">Month</string>
    <string name="solar_radiation">Solar Radiation</string>
    <string name="ac_energy">AC Energy</string>
    <string name="value">Value</string>
    <string name="kwh_m2_day">(kWh/m2/day)</string>
    <string name="kwh">(kWh)</string>
    <string name="value_unit">($)</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="annual">Annual</string>
    <string name="radiation">Radiation</string>
    <string name="dc_energy">DC Energy</string>
    <string name="dc_ac_ratio_default_value">1.2</string>
    <string name="inverter_efficiency_default_value">96</string>
    <string name="gcr_default_value">0.4</string>
    <string name="out_of_range">Out of range</string>
    <string name="range_dc_ac_ratio">Range: greater than zero</string>
    <string name="pv_system_specifications">PV System Specifications</string>
    <string name="dc_system_size">DC System Size</string>
    <string name="module_type">Module Type</string>
    <string name="array_type">Array Type</string>
    <string name="array_tilt">Array Tilt</string>
    <string name="array_azimuth">Array Azimuth</string>
    <string name="system_losses">System Losses</string>
    <string name="inverter_efficiency">Inverter Efficiency</string>
    <string name="dc_to_ac_size_ratio">DC to AC Size Ratio</string>
    <string name="capacity_factor">Capacity Factor</string>
    <string name="location">Location</string>
    <string name="requested_location">Requested Location</string>
    <string name="show_information_about_the_input">Show information about the input</string>
    <string name="description_fragment_inputs_00">Please enter a location. Sometimes a more specific location works better, but other times a more general location is best.</string>
    <string name="description_fragment_inputs_01">Modify the inputs below to run the simulation.</string>
    <string name="system_info">System info</string>
    <string name="continue0">Continue</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="mathsolar">MathSolar</string>
    <string name="log_in_with_your_email_address">Log in with your email address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="error_login">A problem has occurred. Verify that the information was correct.</string>
    <string name="i_forgot_my_password_c">I forgot my password :c</string>
    <string name="subtitle_login">Let\'s make the change</string>
    <string name="math">Math</string>
    <string name="solar">Solar</string>
    <string name="description_cancel_button">Button to cancel the record from any fragment of the record</string>
    <string name="create_an_account">Create an account</string>
    <string name="subtitle_register_00">Enter your name along with your email address to start your registration.</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="create_a_password">Create a password</string>
    <string name="subtitle_register_01">Enter a password and retype it below to compare if they are the same. Must be longer than eight characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="smile">Smile!</string>
    <string name="subtitle_register_02">Click on the icon above to select your profile picture.</string>
    <string name="there_is_no_app_to_take_a_photo">There is no app to take a photo</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="this_email_is_already_in_use">This email is already in use</string>
    <string name="insert_a_valid_email">Insert a valid email</string>
    <string name="short_password_error">The password must be at least eight characters or more.</string>
    <string name="error_login_verify_fields">An error has occurred. Verify that the fields entered are correct.</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="projects">Projects</string>
    <string name="add_edit_and_share_your_projects">Add, edit and share your projects</string>
    <string name="create_project">Create Project</string>
    <string name="hello_calixto">Hello, Calixto</string>
    <string name="type_of_project">Type of project</string>
    <string name="select_the_type_of_project_of_your_photovoltaic_system_to_start_sizing_it">Select the type of project of your photovoltaic system to start sizing it</string>
    <string name="connected_to_the_grid">Connected to the grid</string>
    <string name="hybrid">Hybrid</string>
    <string name="isolated_only_batteries">Isolated (only batteries)</string>
    <string name="project_demand">Project demand</string>
    <string name="please_fill_in_the_fields_with_the_requested_information">Please fill in the fields with the requested information.</string>
    <string name="monthly_demand">Monthly demand</string>
    <string name="peak_demand">Peak demand</string>
    <string name="sum_of_load_powers">Sum of load powers</string>
    <string name="weather_conditions">Weather conditions</string>
    <string name="peak_sun_hours">Peak sun hours</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="module_specifications">Module specifications</string>
    <string name="module_power">Module power</string>
    <string name="open_circuit_voltage">Open circuit voltage</string>
    <string name="short_circuit_current">Short circuit current</string>
    <string name="inverter_specifications">Inverter specifications</string>
    <string name="battery_specifications">Battery specifications</string>
    <string name="days_of_autonomy">Days of autonomy</string>
    <string name="depth_of_discharge">Depth of discharge</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="battery_voltage">Battery voltage</string>
    <string name="project_description">Project description</string>
    <string name="project_name">Project name</string>
    <string name="project_location">Project location</string>
    <string name="view_pager_empty">So far you do not have any dimensioning. Start to create one with the button below</string>
    <string name="select_an_option_first">Select an option first</string>
    <string name="recommended_50">50% is recommended</string>
    <string name="content_description_img_empty_home">Image used to show when the list is empty</string>
    <string name="daily_demand">Daily demand</string>
    <string name="number_of_modules">Number of modules</string>
    <string name="a_inverter_of">An inverter of:</string>
    <string name="a_controller_of">A controller of:</string>
    <string name="number_of_batteries">Number of batteries</string>
    <string name="units">Units</string>

    <string-array name="module_type">
        <item>Standard</item>
        <item>Premium</item>
        <item>Thin Film</item>

    </string-array>

    <string-array name="array_type">
        <item>Fixed (open rack)</item>
        <item>Fixed (roof mount)</item>
        <item>1-Axis Tracking</item>
        <item>1-Axis Backtracking</item>
        <item>2-Axis Tracking</item>

    </string-array>

</resources>