<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.home.addproject.AddProjectFragment01">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_demand"
        android:textColor="@color/TextPrimary"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:lineSpacingExtra="@dimen/_1sdp"
        android:text="@string/please_fill_in_the_fields_with_the_requested_information"
        android:textColor="@color/TextSecondary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/monthly_demand"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:suffixText="kWh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loadMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/peak_demand"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:helperText="@string/sum_of_load_powers"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_load"
        app:prefixText="kW">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoadMax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>