<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.home.add_project.AddProjectFragment05">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_specifications"
        android:textColor="@color/TextPrimary"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:lineSpacingExtra="@dimen/_1sdp"
        android:text="@string/please_fill_in_the_fields_with_the_requested_information"
        android:textColor="@color/TextSecondary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_daysAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/days_of_autonomy"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:suffixText="Days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_daysAutonomy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_depthDischarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/depth_of_discharge"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:helperText="@string/recommended_50"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_daysAutonomy"
        app:suffixText="%">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_depthDischarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_batteryCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/battery_capacity"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_depthDischarge"
        app:suffixText="Ah">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_batteryCapacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_batteryVoltage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/battery_voltage"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_batteryCapacity"
        app:suffixText="V">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_batteryVoltage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>