<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.auth.RegisterFragment00">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textColor="@color/TextPrimary"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:lineSpacingExtra="@dimen/_1sdp"
        android:text="@string/subtitle_register_00"
        android:textColor="@color/TextSecondary"
        android:textSize="@dimen/_13ssp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxStrokeErrorColor="@color/colorError"
        app:endIconMode="clear_text"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/colorError"
        app:errorTextColor="@color/colorError"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxStrokeErrorColor="@color/colorError"
        app:endIconMode="clear_text"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/colorError"
        app:errorTextColor="@color/colorError"
        app:startIconDrawable="@drawable/ic_person_outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxStrokeErrorColor="@color/colorError"
        app:endIconMode="clear_text"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/colorError"
        app:errorTextColor="@color/colorError"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>