<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.home.addproject.AddProjectFragment06">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_description"
        android:textColor="@color/TextPrimary"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:lineSpacingExtra="@dimen/_1sdp"
        android:text="@string/please_fill_in_the_fields_with_the_requested_information"
        android:textColor="@color/TextSecondary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/name"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/location"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/text_selectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_location"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/select_a_photo"
            android:textColor="@color/TextSecondary"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_imageProject"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_24sdp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_selectImage"
        app:strokeColor="@color/material_on_surface_stroke"
        app:strokeWidth="@dimen/_1sdp">

        <ImageView
            android:id="@+id/imageProject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>